# tymex_assessment

./: .env.example  .gitignore  README.md  assessment_report.md  databricks.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-databricks.yml
app/: app.py
notebooks/: cutoff_metrics_analysis.ipynb
resources/: app.yml  jobs.yml  volume.yml
scripts/: create_tables.py  deploy.py
src/churn_dbx/: __init__.py  batch_score.py  checkpoint.py  cli.py  config.py  drift_check.py  features.py  io.py  labels.py  materialize.py  mlflow_utils.py  model_loader.py  promote.py  registry.py  spark.py  train.py
tests/: conftest.py  test_checkpoint.py  test_e2e.py  test_features.py  test_labels.py  test_promote.py
